--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0",
     "axios": "^0.16.2",
-    "vuex": "^2.2.1",
     "lib-flexible": "^0.3.2",
-    "vue-awesome-swiper": "^2.4.2"
+    "vue": "^2.4.2",
+    "vue-awesome-swiper": "^2.4.2",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.2.1",
+    "webpack-zepto": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
