--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-awesome-swiper": "^2.4.2",
     "vue-router": "^2.7.0",
     "vuex": "^2.2.1",
-    "webpack-zepto": "^0.0.1"
+    "webpack-zepto": "^0.0.1",
+    "fastclick": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
