--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "fastclick": "^1.0.6",
     "lib-flexible": "^0.3.2",
     "vue": "^2.4.2",
-    "vue-awesome-swiper": "^2.4.2",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.2.1",
-    "webpack-zepto": "^0.0.1",
-    "fastclick": "^1.0.6"
+    "webpack-zepto": "^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
